--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <html>
+        <head>
+            <!--https://www.w3schools.com/html/tryit.asp?filename=tryhtml_table_intro--!>
+            <style>
+                table {
+                  font-family: arial, sans-serif;
+                  border-collapse: collapse;
+                  width: 100%;
+                }
+
+                td, th {
+                  border: 1px solid #000000;
+                  text-align: left;
+                  padding: 8px;
+                }
+
+                tr:nth-child(even) {
+                  background-color: #dddddd;
+                }
+            </style>
+        </head>
         <body>
             <h1> Stereo101 Misc Projects </h1>
             <table>
@@ -6,6 +26,11 @@
                     <th>Project</th>
                     <th>Description</th>
                     <th>Date</th>
+                </tr>
+                <tr>
+                    <td><a href="/gol3d.html">Game of Life 3d</a></td>
+                    <td>Implementation of a 3d conway's game of life to learn three.js</td>
+                    <td>Sep 5 2021</td>
                 </tr>
             </table>
         </body>
