Added some older projects, nice to have around

--- a/index.html
+++ b/index.html
@@ -27,6 +27,37 @@
                     <th>Description</th>
                     <th>Date</th>
                 </tr>
+                
+                <tr>
+                    <td><a href="clock.html">Clock</a></td>
+                    <td>Learning javascript, first project.</td>
+                    <td>2016</td>
+                </tr> 
+
+                <tr>
+                    <td><a href="conway.html">Game of Life</a></td>
+                    <td>Learning javascript, second project, same day.</td>
+                    <td>2016</td>
+                </tr> 
+
+                <tr>
+                    <td><a href="sin_wave.html">Sine Wave</a></td>
+                    <td>Learning javascript, third project, day after.</td>
+                    <td>2016</td>
+                </tr> 
+
+                <tr>
+                    <td><a href="milton.html">Milton</a></td>
+                    <td>Library assistant from <b>The Talos Princple</b></td>
+                    <td>Mar 6 2017</td>
+                </tr>
+
+                <tr>
+                    <td><a href="phasmo.html">Phasmophobia Clue Tracker</a></td>
+                    <td>Clue tracker that has become unnecessary since the last major update</td>
+                    <td>Aug 30 2021</td>
+                </tr>
+
                 <tr>
                     <td><a href="/gol3d.html">Game of Life 3d</a></td>
                     <td>Implementation of a 3d conway's game of life to learn three.js</td>
