phasmo.html updated for numpad

--- a/phasmo.html
+++ b/phasmo.html
@@ -348,19 +348,19 @@
 	function handleKeyPress(keyPress) {
 		k = keyPress.keyCode;
 		console.log(k);
-		if(k == 49) {
+		if(k == 49 || k == 97) {
 			toggleClue("prints");
-		} else if (k == 50) {
+		} else if (k == 50 || k == 98) {
 			toggleClue("orbs");
-		} else if (k == 51) {
+		} else if (k == 51 || k == 99) {
 			toggleClue("emf");
-		} else if (k == 52) {
+		} else if (k == 52 || k == 100) {
 			toggleClue("box");
-		} else if (k == 53) {
+		} else if (k == 53 || k == 101) {
 			toggleClue("temp");
-		} else if (k == 54) {
+		} else if (k == 54 || k == 102) {
 			toggleClue("book");
-		} else if (k == 55) {
+		} else if (k == 55 || k == 103) {
 			toggleClue("dots");
 		}
 	}
