--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                     <td>Implementation of a 3d conway's game of life to learn three.js</td>
                     <td>Sep 5 2021</td>
                 </tr>
+
+                <tr>
+                    <td><a href="github.com/Stereo101/Advent-of-Code-2021">Advent of Code 2021</a></td>
+                    <td>Advent of Code 2021 in python and C#</td>
+                    <td>Dec 1 2021</td>
+                </tr>
             </table>
         </body>
 </html>
