--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </tr>
 
                 <tr>
-                    <td><a href="github.com/Stereo101/Advent-of-Code-2021">Advent of Code 2021</a></td>
+                    <td><a href="https://www.github.com/Stereo101/Advent-of-Code-2021">Advent of Code 2021</a></td>
                     <td>Advent of Code 2021 in python and C#</td>
                     <td>Dec 1 2021</td>
                 </tr>
