--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                 </tr>
 
                 <tr>
+                    <td><a href="https://www.github.com/Stereo101/Advent-of-Code-2020">Advent of Code 2020</a></td>
+                    <td>Advent of Code 2020 in python, I actually finished this year</td>
+                    <td>Dec 1 2020</td>
+                </tr>
+                
+                <tr>
                     <td><a href="https://www.github.com/Stereo101/Advent-of-Code-2021">Advent of Code 2021</a></td>
                     <td>Advent of Code 2021 in python and C#</td>
                     <td>Dec 1 2021</td>
